--- a/src/cv_improver/config/tasks.yaml
+++ b/src/cv_improver/config/tasks.yaml
@@ -7,7 +7,7 @@ research_task:
 
 profile_task:
   description: >
-    Compile a detailed personal and professional profile using the GitHub ({github_url}) URLs, and personal write-up ({personal_writeup}). Utilize tools to extract and synthesize information from these sources.
+    Compile a detailed personal and professional profile using the Other Information URL ({other_information_url}) URLs, and personal write-up ({personal_writeup}). Utilize tools to extract and synthesize information from these sources.
   expected_output: >
     A comprehensive profile document that includes skills, project experiences, contributions, interests, and communication style.
   agent: profiler
